[package]
name = "branded-derive"
version = "0.1.1"
edition = "2021"
authors = ["Mats Jun Larsen <mats@larsendigital.no>"]
repository = "https://github.com/larsendigital/branded"
description = "Branded types for Rust."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
darling = { version = "0.20"}
