[package]
name = "branded"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
branded-derive = { path = "../branded-derive" }

uuid = { version = "1", optional = true, default-features = false }
sqlx = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite"] }
