[package]
name = "branded"
version = "0.1.0"
edition = "2021"
authors = ["Mats Jun Larsen <mats@larsendigital.no>"]
repository = "https://github.com/larsendigital/branded"
description = "Branded types for Rust."
license = "MIT"

[features]
default = []
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
uuid = ["dep:uuid"]

[dependencies]
branded-derive = { path = "../branded-derive", version = "0.1" }

uuid = { version = "1", optional = true, default-features = false, features = ["v4"] }
sqlx = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite"] }
